Fix path reconstruction